fixed todo list alignment on screen

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,600&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css?family=open sans:100,200,300,400,700&display=swap'); */
-
-
 /* no scrolling! */
 body {
     overflow: hidden;
@@ -348,7 +344,6 @@ button:focus {
 .search,
 .todoWrapper {
     background-color: rgba(0, 0, 0, 0.25);
-
 }
 
 /* search widget */
@@ -359,6 +354,8 @@ button:focus {
     width: 19vw;
     border-width: 0;
     border: none;
+    height: 50px;
+    /* Define a height for the search */
 }
 
 .searchWrapper {
@@ -368,14 +365,18 @@ button:focus {
     z-index: 5;
     opacity: 0;
     display: flex;
+    height: 50px;
 }
 
 /* movable part of search widget */
 .searchDiv {
-    padding: 5px;
-
+    padding: 10px;
     cursor: move;
+    height: 100%;
+}
 
+.searchDiv:hover {
+    background-color: #171717a4;
 }
 
 /* change search button */
